upgrade spring boot + add opens jvm